--- a/podcast.html
+++ b/podcast.html
@@ -56,42 +56,80 @@
     <div class="container-fluid" id="page-margin">
             <div class="row">
                 <div class="col-md-8">
+                    <div>
                     <h2 class="uppercase">Tea with the Morale Queen</h2>
                         <p>Join Morale Queen and professional Tea Drinker Milly Armstrong-Clark as she interviews guests over a hot mug of tea with a big slice of morale pie to brighten your day!</p>
                         <br>
-                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-16-Freddie-Hayes-ekv8lr" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
-                        <br>
-                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-15-Laura-Pollacco-ei43dg/a-a2ujnf0" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
-                        <br>
-                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-14-Mel-Judson-ehp7b5/a-a2sm9es" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
-                        <br>
-                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-13-Pixels-Green-ehdqrr/a-a2qp0vi" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
-                        <br>
-                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-12-Saul-Henry-eh4rpd/a-a2p8ltj" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
-                        <br>
-                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-11-Katy-D-egqulo/a-a2p8anv" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
-                        <br>
-                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-10-James-Bayes-eghf3h/a-a2p8anv" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
-                        <br>
-                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-9-Jed-Salisbury-eg82q9/a-a2p8anv" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
-                        <br>
-                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-8-Ryan-Stocks-efpi45/a-a2p8anv" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
-                        <br>
-                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-7-Annabelle-Devey-efl803/a-a2p8anv" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
-                        <br>
-                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-6-Roman-Armstrong-efb5k4/a-a2p8anv" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
-                        <br>
-                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-5-Sadie-Berry-eet7h5/a-a2p8anv" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
-                        <br>
-                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-4-Tanya-Spence-Kelly-eedioq/a-a2p8anv" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
-                        <br>
-                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-3-Matt-Hoss-eedikh/a-a2p8anv" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
-                        <br>
-                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-2-Carla-Harman-ee5t3f/a-a2p8anv" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
-                        <br>
-                        <iframe src="https://anchor.fm/millyarmstrongclark/embed/episodes/Ep-1-Robert-Clark-edph1h/a-a2p8anv" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
-                        <br>
-                        <br> 
+                            <h3 class="uppercase">Latest Episode</h3>
+                            <iframe src="https://anchor.fm/millyarmstrongclark/embed" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+                    </div>
+                    <br>          
+                    <div>
+                        <div>
+                            <h3 class="uppercase">Where to listen</h3>
+                                <ul>
+                                    <li class="list-inline-item">
+                                        <a target="_blank" href="https://podcasts.apple.com/gb/podcast/tea-with-the-morale-queen/id1513121966">
+                                        <img src="https://d12xoj7p9moygp.cloudfront.net/images/podcast/logo-square/006/apple_podcasts.png" srcset="https://d12xoj7p9moygp.cloudfront.net/images/podcast/logo-square/006/apple_podcasts.png 1x, https://d12xoj7p9moygp.cloudfront.net/images/podcast/logo-square/006/apple_podcasts@2x.png 2x" alt="Apple Podcasts Logo" height="28" width="28">
+                                        <span class="sr-only">Apple Podcasts</span>
+                                        </a>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <a target="_blank" href="https://www.breaker.audio/tea-with-the-morale-queen">
+                                        <img src="https://d12xoj7p9moygp.cloudfront.net/images/podcast/logo-square/006/breaker.png" srcset="https://d12xoj7p9moygp.cloudfront.net/images/podcast/logo-square/006/breaker.png 1x, https://d12xoj7p9moygp.cloudfront.net/images/podcast/logo-square/006/breaker@2x.png 2x" alt="Breaker Logo" height="28" width="28">
+                                        <span class="sr-only">Breaker</span>
+                                        </a>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <a target="_blank" href="https://www.google.com/podcasts?feed=aHR0cHM6Ly9hbmNob3IuZm0vcy8yMDI5NTE0Yy9wb2RjYXN0L3Jzcw==">
+                                        <img src="https://d12xoj7p9moygp.cloudfront.net/images/podcast/logo-square/006/google_podcasts.png" srcset="https://d12xoj7p9moygp.cloudfront.net/images/podcast/logo-square/006/google_podcasts.png 1x, https://d12xoj7p9moygp.cloudfront.net/images/podcast/logo-square/006/google_podcasts@2x.png 2x" alt="Google Podcasts Logo" height="28" width="28">
+                                        <span class="sr-only">Google Podcasts</span>
+                                        </a>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <a target="_blank" href="https://overcast.fm/itunes1513121966/tea-with-the-morale-queen">
+                                        <img src="https://d12xoj7p9moygp.cloudfront.net/images/podcast/logo-square/006/overcast.png" srcset="https://d12xoj7p9moygp.cloudfront.net/images/podcast/logo-square/006/overcast.png 1x, https://d12xoj7p9moygp.cloudfront.net/images/podcast/logo-square/006/overcast@2x.png 2x" alt="Overcast Logo" height="28" width="28">
+                                        <span class="sr-only">Overcast</span>
+                                        </a>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <a target="_blank" href="https://pca.st/8yhzkt9i">
+                                        <img src="https://d12xoj7p9moygp.cloudfront.net/images/podcast/logo-square/006/pocket_casts.png" srcset="https://d12xoj7p9moygp.cloudfront.net/images/podcast/logo-square/006/pocket_casts.png 1x, https://d12xoj7p9moygp.cloudfront.net/images/podcast/logo-square/006/pocket_casts@2x.png 2x" alt="Pocket Casts Logo" height="28" width="28">
+                                        <span class="sr-only">Pocket Casts</span>
+                                        </a>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <a target="_blank" href="https://radiopublic.com/tea-with-the-morale-queen-WDz1Mo">
+                                        <img src="https://d12xoj7p9moygp.cloudfront.net/images/podcast/logo-square/006/radiopublic.png" srcset="https://d12xoj7p9moygp.cloudfront.net/images/podcast/logo-square/006/radiopublic.png 1x, https://d12xoj7p9moygp.cloudfront.net/images/podcast/logo-square/006/radiopublic@2x.png 2x" alt="RadioPublic Logo" height="28" width="28">
+                                        <span class="sr-only">RadioPublic</span>
+                                        </a>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <a target="_blank" href="https://open.spotify.com/show/4rd4WlTP1iLCaWdFX9PFQH">
+                                        <img src="https://d12xoj7p9moygp.cloudfront.net/images/podcast/logo-square/006/spotify.png" srcset="https://d12xoj7p9moygp.cloudfront.net/images/podcast/logo-square/006/spotify.png 1x, https://d12xoj7p9moygp.cloudfront.net/images/podcast/logo-square/006/spotify@2x.png 2x" alt="Spotify Logo" height="28" width="28">
+                                        <span class="sr-only">Spotify</span>
+                                        </a>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <a target="_blank" href="https://www.youtube.com/channel/UCm8_k81-p_cEimTHmhDOB-w">
+                                        <img src="assets/img/youtube_social_squircle_red.png" alt="YouTube Logo" height="28" width="28">
+                                        <span class="sr-only">YouTube</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <br>
+                            <div>
+                                <h3 class="uppercase">Support the Podcast</h3>
+                                <button type="support" class="btn btn-support">
+                                    <a href="https://anchor.fm/millyarmstrongclark/support"> Support </a>
+                                </button>
+                            </div>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                        </div>
                 </div>
                 <div class="col-md-4 d-none d-sm-block">
                     <img class="podcast-image" src="assets/img/mill.png" alt="Tea with the Morale Queen" title="Tea with the Morale Queen"/>
