--- a/index.html
+++ b/index.html
@@ -20,35 +20,19 @@
 <body>
 <!--header-->
     <header>
-        <nav class="navbar navbar-expand-sm">
-            <button
-                class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" 
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="fas fa-bars"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active mr-2">
-                        <a class="nav-link" href="index.html">Home<span class="sr-only"></span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="podcast.html">Podcast</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="standup.html">Stand Up</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="news.html">News</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </nav> 
+        <nav>
+        <label for="drop" class="toggle">Menu</label>
+        <input type="checkbox" id="drop" />
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="podcast.html">Podcast</a></li>              
+                <li><a href="standup.html">Stand Up</a></li>
+                <li><a href="news.html">News</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+
     </header>
 <!--/.header-->
 
@@ -65,13 +49,18 @@
                         <br>
                         <h2 class="uppercase header-text">Professional Tea Drinker</h2>
                 </div>
-                <div class="col-md homepage-image d-none d-sm-block">
+                <div class="col-md homepage-image d-none d-sm-none d-md-block">
                     <figure class="swap-on-hover">
                         <img class="swap-on-hover-head-image-one" src="assets/img/head-image-one.png" alt="Image of Milly" title="Milly Armstrong Clark"/>
                         <img class="swap-on-hoverhead-image-two" src="assets/img/head-image-two.png" alt="Image of Milly pulling a face" title="Milly pulling a face"/>
                     </figure>    
                 </div>
             </div>
+            <div id="footer-image-row" class="row d-block d-md-none">
+            <div class="col">
+                <img class="footer-image" src="assets/img/bottom.png" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
+            </div>
+        </div>  
         </div>
     </section>
 <!--/.section-->
