--- a/about.html
+++ b/about.html
@@ -20,34 +20,18 @@
 <body>
 <!--header-->
     <header>
-        <nav class="navbar navbar-expand-sm">
-            <button
-                class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="fas fa-bars"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active mr-2">
-                        <a class="nav-link" href="index.html">Home<span class="sr-only"></span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="podcast.html">Podcast</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="standup.html">Stand Up</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="news.html">News</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </nav> 
+        <nav>
+        <label for="drop" class="toggle">Menu</label>
+        <input type="checkbox" id="drop" />
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="podcast.html">Podcast</a></li>              
+                <li><a href="standup.html">Stand Up</a></li>
+                <li><a href="news.html">News</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 <!--/.header-->
 
@@ -89,11 +73,14 @@
             <br>
             <br>
         </div>
-        <div id="img-row" class="row d-block d-sm-none">
-            <div class="col">
-                <img class="bottom-image" src="assets/img/bottom.png" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
+
+        <!--visible only on smaller screen sizes-->
+
+            <div id="footer-image-row" class="row d-block d-md-none">
+                <div class="col">
+                    <img class="footer-image" src="assets/img/bottom.png" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
+                </div>
             </div>
-        </div> 
     </section>
 <!--/.section-->
 
