--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-
     </header>
 <!--/.header-->
 
@@ -56,12 +55,14 @@
                     </figure>    
                 </div>
             </div>
-            <div id="footer-image-row" class="row d-block d-md-none">
-            <div class="col">
-                <img class="footer-image" src="assets/img/bottom.png" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
-            </div>
-        </div>  
         </div>
+        <!--visible only on smaller screen sizes-->
+
+            <div id="footer-image-row" class="row d-block d-md-none">
+                <div class="col">
+                    <img class="footer-image" src="assets/img/bottom.png" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
+                </div>
+            </div>
     </section>
 <!--/.section-->
 
@@ -102,7 +103,7 @@
                         </li>
                     </ul>
             </div>
-        </div>
+        </div>  
     </footer>
 <!--/.footer-->
 </body>
