minor changes to structure of about.html

--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
                         or <a class="link-plug" target="_blank" href="https://www.youtube.com/channel/UCm8_k81-p_cEimTHmhDOB-w">YouTube.</a>
                     </p>
                 </div>
-                <div class="col-md d-none d-sm-block">
+                <div class="col-md d-none d-md-block">
                     <img class="about-image" src="assets/img/about.png" alt="Milly with her hands up" title="About Milly"/>
                 </div>
             </div>
