--- a/about.html
+++ b/about.html
@@ -43,10 +43,10 @@
                     <h2 class="uppercase about-header">About Milly</h2>
                     <br>
                     <p class="about-text">
-                        Milly Armstrong Clark is a Yorkshire comedian born and raised in the quaint town of Malton. Throughout her early years, she loved nothing more than to film herself pretending to be elderly women,
-                        which scientists believe may be a defect caused by consuming literally nothing but Yorkshire Tea and pickled gherkins since birth.         
+                        Milly Armstrong Clark is a Yorkshire comedian born and raised in the quaint town of Malton. Throughout her early years, she loved nothing more than to film herself pretending to be elderly people,
+                        which scientists believe may be a defect caused by the over excessive consumption of Yorkshire Tea and pickled gherkins since birth.         
                         <br><br> 
-                        Milly got into stand up in 2019 as a way to subsidise her Yorkshire Tea addiction and avoid having to get a "real" job. Her style has been described as loveably quriky and accidentally intellectual.
+                        Milly got into stand up in 2019 as a way to subsidise her Yorkshire Tea addiction. Her style has been described as loveably quriky and accidentally intellectual.
                         Pulling anicdotes from her mildly ridiculous life, Milly weaves a hilarious narrative with observations of her encounters - from sex shop drive bys to 3am cake baking sessions - and a splash of the delightfully macabre to offer a unique and side-splitting performance.
                         Her first gig was in York, shortly after she was wrongfully accused of telling a small woman to go back to the circus, so every gig since has been a massive improvement by simply not being shouted at in a queue.
                         <br><br>
@@ -57,21 +57,24 @@
                         part-wild musings book entitled "Tales from under the Carrot Tree", which is due for release in all your local bookstores just as soon as she finishes writing the damn thing.
                         <br><br>
                         Outside of her comedic and creative pursuits, Milly is passionate about animals and wildlife. Milly attended the University of Cumbria, where she studied a degree in Wildlife and Media. 
-                        Her history includes a year-long volunteer apprenticeship with the Yorkshire Wildlife Trust, working at two vetinary surgeries in Yorkshire, handling with Birds of Prey, and working with the Cats Protection. 
+                        Her work history includes time with the Yorkshire Wildlife Trust, two vetinary surgeries, a Birds of Prey centre, and the Cats Protection. 
                         Milly has been involved in various fundraising projects to help a great number of wildlife and animal organisations, and is always keen to find ways to merge her passions together.
                         <br><br>
-                        Milly lives with her band of waifs and strays, including husband Rob, a golden retriever called Poppy (or sometimes Div dog), two cats named Xena and Kya, and a bearded dragon called Ziggard Christoper Stark Junior (or Ziggy for short).
-                        You can keep up to date with all things Milly related by following her on <a class="link-plug" target="_blank" href="https://www.instagram.com/millcomedy/"> Instagram,</a> 
+                        Milly lives with her own band of waifs and strays, including husband Rob, a golden retriever called Poppy (also known as Div dog), two cats named Xena (Xenie Bidniss) and Kya (Scripps), and a bearded dragon called Ziggard Christoper Stark Junior (Ziggy).
+                        You can keep up to date with all things Milly-related by following her on <a class="link-plug" target="_blank" href="https://www.instagram.com/millcomedy/"> Instagram,</a> 
                         <a class="link-plug" target="_blank" href="https://www.facebook.com"> Facebook,</a> <a class="link-plug" target="_blank" href="https://www.twitter.com">Twitter</a>
                         or <a class="link-plug" target="_blank" href="https://www.youtube.com/channel/UCm8_k81-p_cEimTHmhDOB-w">YouTube.</a>
                     </p>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
                 </div>
                 <div class="col-md d-none d-md-block">
                     <img class="about-image" src="assets/img/about.png" alt="Milly with her hands up" title="About Milly"/>
                 </div>
             </div>
-            <br>
-            <br>
+            
         </div>
 
         <!--visible only on smaller screen sizes-->
