--- a/standup.html
+++ b/standup.html
@@ -64,19 +64,11 @@
         </div>
         <div class="row">
             <div class="col embed-responsive embed-responsive-16by9 standupclip">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/fcBK3GJsaiw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="video-clip" width="560" height="315" src="https://www.youtube.com/embed/fcBK3GJsaiw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>  
         <br>
         <br> 
-        
-        <!--visible only on smaller screen sizes-->
-
-            <div id="footer-image-row" class="row d-block d-md-none">
-                <div class="col">
-                    <img class="footer-image" src="assets/img/bottom.png" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
-                </div>
-            </div>  
     </section>
 <!--/.section-->
 
