fix the footer image to stay at the bottom

--- a/about.html
+++ b/about.html
@@ -78,10 +78,9 @@
         </div>
 
         <!--visible only on smaller screen sizes-->
-
-            <div id="footer-image-row" class="row d-block d-md-none">
+            <div id="img-row" class="row d-block d-md-none">
                 <div class="col">
-                    <img class="footer-image" src="assets/img/bottom.png" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
+                    <img class="bottom-image" src="assets/img/bottom.png" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
                 </div>
             </div>
     </section>
