--- a/podcast.html
+++ b/podcast.html
@@ -44,13 +44,13 @@
                         <p>Join Morale Queen and professional Tea Drinker Milly Armstrong-Clark as she interviews guests over a hot mug of tea with a big slice of morale pie to brighten your day!</p>
                         <br>
                             <h3 class="uppercase">Latest Episode</h3>
-                            <iframe src="https://anchor.fm/millyarmstrongclark/embed" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+                            <iframe src="https://anchor.fm/millyarmstrongclark/embed" height="102px" width="300px" frameborder="0" scrolling="no"></iframe>
                     </div>
                     <br>          
                     <div>
                         <div>
                             <h3 class="uppercase">Where to listen</h3>
-                                <ul>
+                                <ul class="podcast-icons">
                                     <li class="list-inline-item">
                                         <a target="_blank" href="https://podcasts.apple.com/gb/podcast/tea-with-the-morale-queen/id1513121966">
                                         <img src="https://d12xoj7p9moygp.cloudfront.net/images/podcast/logo-square/006/apple_podcasts.png" srcset="https://d12xoj7p9moygp.cloudfront.net/images/podcast/logo-square/006/apple_podcasts.png 1x, https://d12xoj7p9moygp.cloudfront.net/images/podcast/logo-square/006/apple_podcasts@2x.png 2x" alt="Apple Podcasts Logo" height="28" width="28">
@@ -114,18 +114,16 @@
                             <br>
                         </div>
                 </div>
-                <div class="col-md-4 d-none d-sm-block">
+                <div class="col-md-4 d-none d-md-block">
                     <img class="podcast-image" src="assets/img/mill.png" alt="Tea with the Morale Queen" title="Tea with the Morale Queen"/>
                 </div>
             </div>
-            
             <!--visible only on smaller screen sizes-->
-
-            <div id="footer-image-row" class="row d-block d-md-none">
+            <div id="img-row" class="row d-block d-md-none">
                 <div class="col">
-                    <img class="footer-image" src="assets/img/bottom.png" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
+                    <img class="bottom-image" src="assets/img/bottom.png" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
                 </div>
-            </div>  
+            </div>
         </div>
 <!--/.section-->
 
