--- a/standup.html
+++ b/standup.html
@@ -68,7 +68,12 @@
             </div>
         </div>  
         <br>
-        <br> 
+        <!--visible only on smaller screen sizes-->
+            <div id="img-row" class="row d-block d-md-none">
+                <div class="col">
+                    <img class="bottom-image" src="assets/img/bottom.png" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
+                </div>
+            </div> 
     </section>
 <!--/.section-->
 
