add credit to code used

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                         <br>
                         <h2 class="uppercase header-text">Professional Tea Drinker</h2>
                 </div>
+
+                <!--Credit to Creative Programmer for the image hover code-->
+
                 <div class="col-md homepage-image d-none d-sm-none d-md-block">
                     <figure class="swap-on-hover">
                         <img class="swap-on-hover-head-image-one" src="assets/img/head-image-one.png" alt="Image of Milly" title="Milly Armstrong Clark"/>
