--- a/index.html
+++ b/index.html
@@ -36,35 +36,23 @@
 <!--/.header-->
 
 <!--section-->
-    <section id="section-fit">
-        <div id="page-margin" class="container-fluid">
+    <section>
+        <div class="container">
             <div class="row">
-                <div class="col-md intro-text">
-                    <h1 class="uppercase main-header-text">Milly Armstrong Clark</h1> 
-                        <br>      
-                        <h2 class="uppercase header-text">Stand Up Comedian</h2>
-                        <br>
-                        <h2 class="uppercase header-text">Morale Queen</h2>
-                        <br>
-                        <h2 class="uppercase header-text">Professional Tea Drinker</h2>
+                <div class="col-md"> 
+                    <h1 class="uppercase"> Milly Armstrong Clark </h1>
+                    <h2 class="uppercase"> Comedian<h2>
+                    <h2 class="uppercase"> Morale Queen<h2>
+                    <h2 class="uppercase"> "Professional" Tea Drinker<h2>
                 </div>
-
-                <!--Credit to Creative Programmer for the image hover code-->
-
-                <div class="col-md homepage-image d-none d-sm-none d-md-block">
+                <div class="col-md sm-12">
                     <figure class="swap-on-hover">
                         <img class="swap-on-hover-head-image-one" src="assets/img/head-image-one.png" alt="Image of Milly" title="Milly Armstrong Clark"/>
                         <img class="swap-on-hover-head-image-two" src="assets/img/head-image-two.png" alt="Image of Milly pulling a face" title="Milly pulling a face"/>
-                    </figure>    
+                    </figure>
                 </div>
             </div>
         </div>
-        <!--visible only on smaller screen sizes-->
-            <div id="img-row" class="row d-block d-md-none">
-                <div class="col">
-                    <img class="bottom-image" src="assets/img/bottom.png" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
-                </div>
-            </div>
     </section>
 <!--/.section-->
 
