fix container issue sitewide

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 
 <!--section-->
     <section>
-        <div class="container-fluid" id="page-margin">
+        <div class="container">
             <div class="row">
                 <div class="col-md">
                     <h2 class="uppercase about-header">About Milly</h2>
