--- a/standup.html
+++ b/standup.html
@@ -37,7 +37,7 @@
 <!--/.header-->
 
 <!--section-->
-    <section class="container-fluid" id="page-margin">
+    <section class="container">
         <div class="row">
             <div class="col">
                 <h2 class="uppercase">Stand Up</h2>
