--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 
 
 <!--section-->
-    <section class="container-fluid" id="page-margin">
+    <section class="container">
     <div class="row">
         <div class="col">
             <h2 class="uppercase">Contact Milly</h2>
