--- a/news.html
+++ b/news.html
@@ -36,7 +36,7 @@
 <!--/.header-->
 
 <!--section-->
-    <section id="page-margin" class="container-fluid">
+    <section class="container">
         <div class="row">
             <div class="col">
                 <h2 class="uppercase">News</h2>
