--- a/podcast.html
+++ b/podcast.html
@@ -36,7 +36,7 @@
 <!--/.header-->
 
 <!--section-->
-    <div class="container-fluid" id="page-margin">
+    <div class="container">
             <div class="row">
                 <div class="col-md-8">
                     <div>
