fix made to images on smaller screen sizes

--- a/news.html
+++ b/news.html
@@ -54,7 +54,7 @@
                 You can listen to the episode with Milly, or binge all the episodes by clicking <a class="link-plug" href="https://open.spotify.com/episode/2mhASYlpHZ4IpoMgu268ex?si=s5oLAM9VSdKwmTCH4UGozA" target="_blank"> here. </a>
                 </p>
             </div>
-            <div class="col-lg md-4">
+            <div class="col-lg md-4 align-self-center">
                 <a href="https://open.spotify.com/episode/2mhASYlpHZ4IpoMgu268ex?si=s5oLAM9VSdKwmTCH4UGozA" target="_blank">
                     <img class="news-img" src="assets/img/confidence-podcast.jpg" alt="Confidence For Breakfast Podcast" title="Confidence for Breakfast Podcast"/>
                 </a>
@@ -74,7 +74,7 @@
                 The set was recorded, so you can catch it in full by clicking on the Stand Up tab, or clicking <a class="link-plug" href="standup.html"> here. </a>
                 </p>
             </div>
-            <div class="col-lg">
+            <div class="col-lg align-self-center">
                 <a href="standup.html">
                     <img class="news-img" src="assets/img/burton-constable.jpeg" alt="Milly at Burton Constable for Hull Comedy Festival" title="Burton Constable"/>
                 </a>
@@ -91,7 +91,7 @@
                 The episode is available to watch on YouTube via this <a class="link-plug" target="_blank" href="https://www.youtube.com/watch?v=lAvvAn2BcFs"> link. </a>
                 </p>
             </div>
-            <div class="col-lg">
+            <div class="col-lg align-self-center">
                 <a href="https://www.youtube.com/watch?v=lAvvAn2BcFs" target="_blank">
                     <img class="news-img" src="assets/img/popped-culture.png" alt="Popped Culture Screenshot" title="Popped Culture"/>
                 </a>
@@ -109,7 +109,7 @@
                 You can listen to the episode, or any future episodes by clicking <a class="link-plug" href="https://anchor.fm/millyarmstrongclark#:~:text=Join%20Morale%20Queen%20and%20professional,pie%20to%20brighten%20your%20day!" target="_blank"> here. </a>
                 </p>
             </div>
-            <div class="col-lg">
+            <div class="col-lg align-self-center">
                 <a href="https://anchor.fm/millyarmstrongclark#:~:text=Join%20Morale%20Queen%20and%20professional,pie%20to%20brighten%20your%20day!" target="_blank">
                     <img class="news-img" src="assets/img/morale-queen-podcast.jpg" alt="Tea with the Morale Queen Podcast" title="Tea with the Morale Queen Podcast"/>
                 </a>
