--- a/podcast.html
+++ b/podcast.html
@@ -43,13 +43,13 @@
                     <h2 class="uppercase">Tea with the Morale Queen</h2>
                         <p>Join Morale Queen and professional Tea Drinker Milly Armstrong-Clark as she interviews guests over a hot mug of tea with a big slice of morale pie to brighten your day!</p>
                         <br>
-                            <h3 class="uppercase">Latest Episode</h3>
-                            <iframe src="https://anchor.fm/millyarmstrongclark/embed" height="102px" width="300px" frameborder="0" scrolling="no"></iframe>
+                            <h3 class="sub-uppercase">Latest Episode</h3>
+                            <iframe src="https://anchor.fm/millyarmstrongclark/embed" height="102x" width="350px" frameborder="0" scrolling="no"></iframe>
                     </div>
                     <br>          
                     <div>
                         <div>
-                            <h3 class="uppercase">Where to listen</h3>
+                            <h3 class="sub-uppercase">Where to listen</h3>
                                 <ul class="podcast-icons">
                                     <li class="list-inline-item">
                                         <a target="_blank" href="https://podcasts.apple.com/gb/podcast/tea-with-the-morale-queen/id1513121966">
@@ -103,7 +103,7 @@
                             </div>
                             <br>
                             <div>
-                                <h3 class="uppercase">Support the Podcast</h3>
+                                <h3 class="sub-uppercase">Support the Podcast</h3>
                                 <button type="support" class="btn btn-support">
                                     <a href="https://anchor.fm/millyarmstrongclark/support"> Support </a>
                                 </button>
@@ -123,7 +123,9 @@
                 <div class="col">
                     <img class="bottom-image" src="assets/img/bottom.png" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
                 </div>
-            </div>
+            </div> 
+
+
         </div>
 <!--/.section-->
 
