fix images from jpeg to webp for faster loading

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
      <style>
         body {
-            background-image: url(assets/img/background.jpg);
+            background-image: url(assets/img/background.webp);
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
@@ -65,7 +65,7 @@
             <br>
         <div id="img-row" class="row">
             <div class="col">
-                <img class="bottom-image" src="assets/img/bottom.png" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
+                <img class="bottom-image" src="assets/img/bottom.webp" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
             </div>
         </div>  
         </div>
