--- a/podcast.html
+++ b/podcast.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
      <style>
         body {
-            background-image: url(assets/img/background.jpg);
+            background-image: url(assets/img/background.webp);
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
@@ -115,13 +115,13 @@
                         </div>
                 </div>
                 <div class="col-md-4 d-none d-md-block">
-                    <img class="podcast-image" src="assets/img/mill.png" alt="Tea with the Morale Queen" title="Tea with the Morale Queen"/>
+                    <img class="podcast-image" src="assets/img/mill.webp" alt="Tea with the Morale Queen" title="Tea with the Morale Queen"/>
                 </div>
             </div>
             <!--visible only on smaller screen sizes-->
             <div id="img-row" class="row d-block d-md-none">
                 <div class="col">
-                    <img class="bottom-image" src="assets/img/bottom.png" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
+                    <img class="bottom-image" src="assets/img/bottom.webp" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
                 </div>
             </div> 
 
