--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
      <style>
         body {
-            background-image: url(assets/img/background.jpg);
+            background-image: url(assets/img/background.webp);
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
@@ -47,8 +47,8 @@
                 </div>
                 <div class="col-md sm-12">
                     <figure class="swap-on-hover">
-                        <img class="swap-on-hover-head-image-one" src="assets/img/head-image-one.png" alt="Image of Milly" title="Milly Armstrong Clark"/>
-                        <img class="swap-on-hover-head-image-two" src="assets/img/head-image-two.png" alt="Image of Milly pulling a face" title="Milly pulling a face"/>
+                        <img class="swap-on-hover-head-image-one" src="assets/img/head-image-one.webp" alt="Image of Milly" title="Milly Armstrong Clark"/>
+                        <img class="swap-on-hover-head-image-two" src="assets/img/head-image-two.webp" alt="Image of Milly pulling a face" title="Milly pulling a face"/>
                     </figure>
                 </div>
             </div>
