--- a/standup.html
+++ b/standup.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
      <style>
         body {
-            background-image: url(assets/img/background.jpg);
+            background-image: url(assets/img/background.webp);
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
@@ -71,7 +71,7 @@
         <!--visible only on smaller screen sizes-->
             <div id="img-row" class="row d-block d-md-none">
                 <div class="col">
-                    <img class="bottom-image" src="assets/img/bottom.png" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
+                    <img class="bottom-image" src="assets/img/bottom.webp" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
                 </div>
             </div> 
     </section>
