fix issues arisen in validator test

--- a/podcast.html
+++ b/podcast.html
@@ -44,7 +44,7 @@
                         <p>Join Morale Queen and professional Tea Drinker Milly Armstrong-Clark as she interviews guests over a hot mug of tea with a big slice of morale pie to brighten your day!</p>
                         <br>
                             <h3 class="sub-uppercase">Latest Episode</h3>
-                            <iframe src="https://anchor.fm/millyarmstrongclark/embed" height="102x" width="350px" frameborder="0" scrolling="no"></iframe>
+                            <iframe src="https://anchor.fm/millyarmstrongclark/embed" height="102" width="350"></iframe>
                     </div>
                     <br>          
                     <div>
@@ -104,9 +104,10 @@
                             <br>
                             <div>
                                 <h3 class="sub-uppercase">Support the Podcast</h3>
-                                <button type="support" class="btn btn-support">
-                                    <a href="https://anchor.fm/millyarmstrongclark/support"> Support </a>
-                                </button>
+                                <!--Credit to w3docs https://www.w3docs.com/snippets/html/how-to-create-an-html-button-that-acts-like-a-link.html-->
+                                <form action="https://anchor.fm/millyarmstrongclark/support" method="get" target="_blank">
+                                    <button type="submit" class="btn btn-submit"> Support </button>
+                                </form>
                             </div>
                             <br>
                             <br>
