--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <div class="row">
                 <div class="col-md"> 
                     <h1 class="uppercase"> Milly Armstrong Clark </h1>
-                    <h2 class="uppercase"> Comedian<h2>
-                    <h2 class="uppercase"> Morale Queen<h2>
-                    <h2 class="uppercase"> "Professional" Tea Drinker<h2>
+                    <h2 class="uppercase"> Comedian </h2>
+                    <h2 class="uppercase"> Morale Queen </h2>
+                    <h2 class="uppercase"> "Professional" Tea Drinker </h2>
                 </div>
                 <div class="col-md sm-12">
                     <figure class="swap-on-hover">
