--- a/standup.html
+++ b/standup.html
@@ -64,7 +64,7 @@
         </div>
         <div class="row">
             <div class="col embed-responsive embed-responsive-16by9 standupclip">
-                <iframe class="video-clip" width="560" height="315" src="https://www.youtube.com/embed/fcBK3GJsaiw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="video-clip" width="560" height="315" src="https://www.youtube.com/embed/fcBK3GJsaiw" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>  
         <br>
