fix padding issues where br had been used previously

--- a/news.html
+++ b/news.html
@@ -37,13 +37,13 @@
 
 <!--section-->
     <section class="container">
-        <div class="row">
+        <div class="row news-row">
             <div class="col">
                 <h2 class="uppercase">News</h2>
             </div>
         </div>
         <br>
-        <div class="row">
+        <div class="row news-row">
             <div class="col-lg md-8">
                 <h3>28th October 2020</h3>
                 <br>
@@ -61,7 +61,7 @@
             </div>
         </div>
         <br>
-        <div class="row">
+        <div class="row news-row">
             <div class="col-lg">
                 <h3>30th August 2020</h3>
                 <br>
@@ -81,7 +81,7 @@
             </div>
         </div>
         <br>
-        <div class="row">
+        <div class="row news-row">
             <div class="col-lg">
                 <h3>8th July 2020</h3>
                 <br>
@@ -98,7 +98,7 @@
             </div>
         </div>
         <br>
-        <div class="row">
+        <div class="row news-row">
             <div class="col-lg">
                 <h3>8th May 2020</h3>
                 <br>
@@ -116,13 +116,11 @@
             </div>
         </div>
         <br>
-        <br>
         <div id="img-row" class="row">
             <div class="col">
                 <img class="bottom-image" src="assets/img/bottom.webp" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
             </div>
         </div>
-    
     </section>
 <!--/.section-->
 
