--- a/standup.html
+++ b/standup.html
@@ -62,7 +62,7 @@
                 <h4>11th Jan 2020</h4>
             </div>
         </div>
-        <div class="row">
+        <div class="row standup-row">
             <div class="col embed-responsive embed-responsive-16by9 standupclip">
                 <iframe class="video-clip" width="560" height="315" src="https://www.youtube.com/embed/fcBK3GJsaiw" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
