--- a/about.html
+++ b/about.html
@@ -6,14 +6,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css"/>
     <link rel="stylesheet" href="assets/css/style.css">
-     <style>
-        body {
-            background-image: url(assets/img/background.webp);
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size: cover;
-        }
-    </style>
     <title>Milly Armstrong Clark | Comedian, Morale Queen, Professional Tea Drinker</title>  
 </head>
 
@@ -67,7 +59,7 @@
                     </p>
                 </div>
                 <div class="col-md d-none d-md-block">
-                    <img class="about-image" src="assets/img/about.webp" alt="Milly with her hands up" title="About Milly"/>
+                    <img class="about-image" src="assets/img/about.png" alt="Milly with her hands up" title="About Milly"/>
                 </div>
             </div>          
         </div>
@@ -75,7 +67,7 @@
         <!--visible only on smaller screen sizes-->
             <div id="img-row" class="row d-block d-md-none">
                 <div class="col">
-                    <img class="bottom-image" src="assets/img/bottom.webp" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
+                    <img class="bottom-image" src="assets/img/bottom.png" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
                 </div>
             </div>
     </section>
