--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
             </div>
         <div id="img-row" class="row">
             <div class="col">
-                <img class="bottom-image" src="assets/img/bottom.webp" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
+                <img class="bottom-image" src="assets/img/bottom.png" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
             </div>
         </div>  
         </div>
