--- a/index.html
+++ b/index.html
@@ -6,14 +6,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css"/>
     <link rel="stylesheet" href="assets/css/style.css">
-     <style>
-        body {
-            background-image: url(assets/img/background.webp);
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size: cover;
-        }
-    </style>
     <title>Milly Armstrong Clark | Comedian, Morale Queen, Professional Tea Drinker</title>  
 </head>
 
@@ -47,8 +39,8 @@
                 </div>
                 <div class="col-md sm-12">
                     <figure class="swap-on-hover">
-                        <img class="swap-on-hover-head-image-one" src="assets/img/head-image-one.webp" alt="Image of Milly" title="Milly Armstrong Clark"/>
-                        <img class="swap-on-hover-head-image-two" src="assets/img/head-image-two.webp" alt="Image of Milly pulling a face" title="Milly pulling a face"/>
+                        <img class="swap-on-hover-head-image-one" src="assets/img/head-image-one.png" alt="Image of Milly" title="Milly Armstrong Clark"/>
+                        <img class="swap-on-hover-head-image-two" src="assets/img/head-image-two.png" alt="Image of Milly pulling a face" title="Milly pulling a face"/>
                     </figure>
                 </div>
             </div>
