--- a/podcast.html
+++ b/podcast.html
@@ -6,14 +6,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css"/>
     <link rel="stylesheet" href="assets/css/style.css">
-     <style>
-        body {
-            background-image: url(assets/img/background.webp);
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size: cover;
-        }
-    </style>
     <title>Milly Armstrong Clark | Comedian, Morale Queen, Professional Tea Drinker</title>  
 </head>
 
@@ -115,13 +107,13 @@
                         </div>
                 </div>
                 <div class="col-md-4 d-none d-md-block">
-                    <img class="podcast-image" src="assets/img/mill.webp" alt="Tea with the Morale Queen" title="Tea with the Morale Queen"/>
+                    <img class="podcast-image" src="assets/img/mill.png" alt="Tea with the Morale Queen" title="Tea with the Morale Queen"/>
                 </div>
             </div>
             <!--visible only on smaller screen sizes-->
             <div id="img-row" class="row d-block d-md-none">
                 <div class="col">
-                    <img class="bottom-image" src="assets/img/bottom.webp" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
+                    <img class="bottom-image" src="assets/img/bottom.png" alt="Milly poking up her head" title="Milly Armstrong Clark"/>
                 </div>
             </div> 
 
