add top and bottom margins to pages and add screenshots to README

--- a/about.html
+++ b/about.html
@@ -31,10 +31,10 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-md">
+                <div class="col-md page-text">
                     <h2 class="uppercase about-header">About Milly</h2>
                     <br>
-                    <p class="about-text">
+                    <p>
                         Milly Armstrong Clark is a Yorkshire comedian born and raised in the quaint town of Malton. Throughout her early years, she loved nothing more than to film herself pretending to be elderly people,
                         which scientists believe may be a defect caused by the over excessive consumption of Yorkshire Tea and pickled gherkins since birth.         
                         <br><br>
