--- a/news.html
+++ b/news.html
@@ -30,7 +30,7 @@
 <!--section-->
     <section class="container">
         <div class="row news-row">
-            <div class="col">
+            <div class="col alt-page-text">
                 <h2 class="uppercase">News</h2>
             </div>
         </div>
