--- a/podcast.html
+++ b/podcast.html
@@ -30,7 +30,7 @@
 <!--section-->
     <div class="container">
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-8 page-text">
                     <div>
                     <h2 class="uppercase">Tea with the Morale Queen</h2>
                         <p>Join Morale Queen and professional Tea Drinker Milly Armstrong-Clark as she interviews guests over a hot mug of tea with a big slice of morale pie to brighten your day!</p>
