--- a/standup.html
+++ b/standup.html
@@ -31,7 +31,7 @@
 <!--section-->
     <section class="container">
         <div class="row">
-            <div class="col">
+            <div class="col alt-page-text">
                 <h2 class="uppercase">Stand Up</h2>
             </div>
         </div> 
