--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css"/>
     <link rel="stylesheet" href="assets/css/style.css">
-     <style>
-        body {
-            background-image: url(assets/img/background.webp);
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size: cover;
-        }
-    </style>
     <title>Milly Armstrong Clark | Comedian, Morale Queen, Professional Tea Drinker</title>  
 </head>
 
@@ -39,7 +31,7 @@
 <!--section-->
     <section class="container">
     <div class="row">
-        <div class="col">
+        <div class="col alt-page-text">
             <h2 class="uppercase">Contact Milly</h2>
             <br>
             <p>
