fix spelling mistakes in content

--- a/standup.html
+++ b/standup.html
@@ -39,11 +39,11 @@
             <div class="col">
                 <p>
                 Milly has been a stand up comedian since 2019, but has been telling jokes and funny stories since she could talk. 
-                Pulling anicdotes from her mildly ridiculous life, Milly weaves a hilarious narrative combining tales from her more peculiar encounters 
-                (from sex shop drive bys to 3am cake baking sessions) in with observations of 21st century life (the maddening inconsistency of jeans) 
-                and adds a splash of the delightfully macabre to offer a unique and side-splitting performance.
+                Her style has been described as loveably quirky and accidentally intellectual. Pulling anecdotes from her mildly ridiculous life, 
+                Milly weaves a hilarious narrative with observations of her encounters - from motorway sex shops to 3am cake baking sessions - 
+                and a splash of the delightfully macabre to offer a unique and side-splitting performance.
                 <br>
-                Watch Milly's hilarious set via the videos below! 
+                Watch Milly's hilarious set below! 
                 </p>
             </div>
         </div>
