--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
             </ul>
         </nav>
     </header>
-<!--/.header-->
+<!--header-->
 
 <!--section-->
-    <section>
+    <section class="main-section">
         <div class="container">
             <div class="row">
-                <div class="col-md"> 
+                <div class="col-sm-12 col-md-6">
                     <br>
-                    <h1 class="uppercase"> Milly Armstrong Clark </h1>
-                    <h2 class="uppercase"> Comedian </h2>
-                    <h2 class="uppercase"> Morale Queen </h2>
-                    <h2 class="uppercase"> "Professional" Tea Drinker </h2>
+                    <h1 class="uppercase">Milly Armstrong Clark</h1>
+                    <h2 class="uppercase">Comedian</h2>
+                    <h2 class="uppercase">Morale Queen</h2>
+                    <h2 class="uppercase">Tea Drinker</h2>
                 </div>
-                <div class="col-md sm-12">
+                <div class="col-sm-12 col-md-6">
                     <figure class="swap-on-hover">
                         <img class="swap-on-hover-head-image-one" src="assets/img/head-image-one.png" alt="Image of Milly" title="Milly Armstrong Clark"/>
                         <img class="swap-on-hover-head-image-two" src="assets/img/head-image-two.png" alt="Image of Milly pulling a face" title="Milly pulling a face"/>
@@ -47,7 +47,7 @@
             </div>
         </div>
     </section>
-<!--/.section-->
+<!--section-->
 
 <!--footer-->
     <footer class="container-fluid">
@@ -55,32 +55,20 @@
             <div class="col">
                     <ul class="list-inline social-links">
                         <li class="list-inline-item">
-                            <a target="_blank" href="https://www.facebook.com">
-                                <i class="fa fa-facebook" aria-hidden="true"></i>
-                                <span class="sr-only">Facebook</span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a target="_blank" href="https://www.twitter.com">
-                                <i class="fa fa-twitter" aria-hidden="true"></i>
-                                <span class="sr-only">Twitter</span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
                             <a target="_blank" href="https://www.instagram.com/millcomedy/">
-                                <i class="fa fa-instagram" aria-hidden="true"></i>
+                                <i class="sm-icon fa fa-instagram" aria-hidden="true"></i>
                                 <span class="sr-only">Instagram</span>
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a target="_blank" href="https://www.youtube.com/channel/UCm8_k81-p_cEimTHmhDOB-w">
-                                <i class="fa fa-youtube" aria-hidden="true"></i>
+                                <i class="sm-icon fa fa-youtube" aria-hidden="true"></i>
                                 <span class="sr-only">YouTube</span>
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a href="contact.html">
-                                <i class="fa fa-envelope-square" aria-hidden="true"></i>
+                                <i class="sm-icon fa fa-envelope-square" aria-hidden="true"></i>
                                 <span class="sr-only">Contact</span>
                             </a>
                         </li>
@@ -88,7 +76,7 @@
             </div>
         </div>  
     </footer>
-<!--/.footer-->
+<!--footer-->
 </body>
 
 </html>
