--- a/contact.html
+++ b/contact.html
@@ -31,13 +31,11 @@
 <!--section-->
     <section class="container">
     <div class="row">
-        <div class="col alt-page-text">
+        <div class="col alt-page-text text-center">
             <h2 class="uppercase">Contact Milly</h2>
             <br>
             <p>
-            For all work and business enquiries, please contact Milly at contact@millcomedy.co.uk 
-            <br>
-            For all other enquiries, or if you just wanted to send Milly a message, please use the contact form below!
+            For all work and business enquiries, please use the contact form below!
             </p>
             <div class="center-form">
                 <form>
@@ -64,45 +62,34 @@
 <!--/.section-->
 
 <!--footer-->
-    <footer class="container-fluid">
-        <div id="footer-details" class="row">
-            <div class="col">
-                    <ul class="list-inline social-links">
-                        <li class="list-inline-item">
-                            <a target="_blank" href="https://www.facebook.com">
-                                <i class="fa fa-facebook" aria-hidden="true"></i>
-                                <span class="sr-only">Facebook</span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a target="_blank" href="https://www.twitter.com">
-                                <i class="fa fa-twitter" aria-hidden="true"></i>
-                                <span class="sr-only">Twitter</span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a target="_blank" href="https://www.instagram.com/millcomedy/">
-                                <i class="fa fa-instagram" aria-hidden="true"></i>
-                                <span class="sr-only">Instagram</span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a target="_blank" href="https://www.youtube.com/channel/UCm8_k81-p_cEimTHmhDOB-w">
-                                <i class="fa fa-youtube" aria-hidden="true"></i>
-                                <span class="sr-only">YouTube</span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="contact.html">
-                                <i class="fa fa-envelope-square" aria-hidden="true"></i>
-                                <span class="sr-only">Contact</span>
-                            </a>
-                        </li>
-                    </ul>
-            </div>
+<footer class="container-fluid">
+    <div id="footer-details" class="row">
+        <div class="col">
+                <ul class="list-inline social-links">
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.instagram.com/millcomedy/">
+                            <i class="sm-icon fa fa-instagram" aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.youtube.com/channel/UCm8_k81-p_cEimTHmhDOB-w">
+                            <i class="sm-icon fa fa-youtube" aria-hidden="true"></i>
+                            <span class="sr-only">YouTube</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="contact.html">
+                            <i class="sm-icon fa fa-envelope-square" aria-hidden="true"></i>
+                            <span class="sr-only">Contact</span>
+                        </a>
+                    </li>
+                </ul>
         </div>
-    </footer>
-<!--/.footer-->
+    </div>  
+</footer>
+<!--footer-->
+
 </body>
 
 </html>
