--- a/news.html
+++ b/news.html
@@ -31,7 +31,7 @@
     <section class="container">
         <div class="row news-row">
             <div class="col alt-page-text">
-                <h2 class="uppercase">News</h2>
+                <h2 class="uppercase text-center">News</h2>
             </div>
         </div>
         <br>
@@ -117,45 +117,34 @@
 <!--/.section-->
 
 <!--footer-->
-    <footer class="container-fluid">
-        <div id="footer-details" class="row">
-            <div class="col">
-                    <ul class="list-inline social-links">
-                        <li class="list-inline-item">
-                            <a target="_blank" href="https://www.facebook.com">
-                                <i class="fa fa-facebook" aria-hidden="true"></i>
-                                <span class="sr-only">Facebook</span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a target="_blank" href="https://www.twitter.com">
-                                <i class="fa fa-twitter" aria-hidden="true"></i>
-                                <span class="sr-only">Twitter</span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a target="_blank" href="https://www.instagram.com/millcomedy/">
-                                <i class="fa fa-instagram" aria-hidden="true"></i>
-                                <span class="sr-only">Instagram</span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a target="_blank" href="https://www.youtube.com/channel/UCm8_k81-p_cEimTHmhDOB-w">
-                                <i class="fa fa-youtube" aria-hidden="true"></i>
-                                <span class="sr-only">YouTube</span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="contact.html">
-                                <i class="fa fa-envelope-square" aria-hidden="true"></i>
-                                <span class="sr-only">Contact</span>
-                            </a>
-                        </li>
-                    </ul>
-            </div>
+<footer class="container-fluid">
+    <div id="footer-details" class="row">
+        <div class="col">
+                <ul class="list-inline social-links">
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.instagram.com/millcomedy/">
+                            <i class="sm-icon fa fa-instagram" aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.youtube.com/channel/UCm8_k81-p_cEimTHmhDOB-w">
+                            <i class="sm-icon fa fa-youtube" aria-hidden="true"></i>
+                            <span class="sr-only">YouTube</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="contact.html">
+                            <i class="sm-icon fa fa-envelope-square" aria-hidden="true"></i>
+                            <span class="sr-only">Contact</span>
+                        </a>
+                    </li>
+                </ul>
         </div>
-    </footer>
-<!--/.footer-->
+    </div>  
+</footer>
+<!--footer-->
+
 </body>
 
 </html>
