--- a/podcast.html
+++ b/podcast.html
@@ -32,7 +32,7 @@
             <div class="row">
                 <div class="col-md-8 page-text">
                     <div>
-                    <h2 class="uppercase">Tea with the Morale Queen</h2>
+                    <h2 class="uppercase text-center">Tea with the Morale Queen</h2>
                         <br>
                         <p>Join Morale Queen and professional Tea Drinker Milly Armstrong-Clark as she interviews guests over a hot mug of tea with a big slice of morale pie to brighten your day!</p>
                         <br>
@@ -123,45 +123,34 @@
 <!--/.section-->
 
 <!--footer-->
-    <footer class="container-fluid">
-        <div id="footer-details" class="row">
-            <div class="col">
-                    <ul class="list-inline social-links">
-                        <li class="list-inline-item">
-                            <a target="_blank" href="https://www.facebook.com">
-                                <i class="fa fa-facebook" aria-hidden="true"></i>
-                                <span class="sr-only">Facebook</span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a target="_blank" href="https://www.twitter.com">
-                                <i class="fa fa-twitter" aria-hidden="true"></i>
-                                <span class="sr-only">Twitter</span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a target="_blank" href="https://www.instagram.com/millcomedy/">
-                                <i class="fa fa-instagram" aria-hidden="true"></i>
-                                <span class="sr-only">Instagram</span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a target="_blank" href="https://www.youtube.com/channel/UCm8_k81-p_cEimTHmhDOB-w">
-                                <i class="fa fa-youtube" aria-hidden="true"></i>
-                                <span class="sr-only">YouTube</span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="contact.html">
-                                <i class="fa fa-envelope-square" aria-hidden="true"></i>
-                                <span class="sr-only">Contact</span>
-                            </a>
-                        </li>
-                    </ul>
-            </div>
+<footer class="container-fluid">
+    <div id="footer-details" class="row">
+        <div class="col">
+                <ul class="list-inline social-links">
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.instagram.com/millcomedy/">
+                            <i class="sm-icon fa fa-instagram" aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.youtube.com/channel/UCm8_k81-p_cEimTHmhDOB-w">
+                            <i class="sm-icon fa fa-youtube" aria-hidden="true"></i>
+                            <span class="sr-only">YouTube</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="contact.html">
+                            <i class="sm-icon fa fa-envelope-square" aria-hidden="true"></i>
+                            <span class="sr-only">Contact</span>
+                        </a>
+                    </li>
+                </ul>
         </div>
-    </footer>
-<!--/.footer-->
+    </div>  
+</footer>
+<!--footer-->
+
 </body>
 
 </html>
