--- a/standup.html
+++ b/standup.html
@@ -29,10 +29,10 @@
 <!--/.header-->
 
 <!--section-->
-    <section class="container">
+    <section class="container mb-5">
         <div class="row">
             <div class="col alt-page-text">
-                <h2 class="uppercase">Stand Up</h2>
+                <h2 class="uppercase text-center">Stand Up</h2>
             </div>
         </div> 
         <div class="row">
@@ -56,8 +56,8 @@
                 <h4>11th Jan 2020</h4>
             </div>
         </div>
-        <div class="row standup-row">
-            <div class="col embed-responsive embed-responsive-16by9 standupclip">
+        <div class="row standup-row align-self-center">
+            <div class="col-12 col-md-8 embed-responsive embed-responsive-16by9 standupclip">
                 <iframe class="video-clip" width="560" height="315" src="https://www.youtube.com/embed/fcBK3GJsaiw" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>  
@@ -72,45 +72,34 @@
 <!--/.section-->
 
 <!--footer-->
-    <footer class="container-fluid">
-        <div id="footer-details" class="row">
-            <div class="col">
-                    <ul class="list-inline social-links">
-                        <li class="list-inline-item">
-                            <a target="_blank" href="https://www.facebook.com">
-                                <i class="fa fa-facebook" aria-hidden="true"></i>
-                                <span class="sr-only">Facebook</span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a target="_blank" href="https://www.twitter.com">
-                                <i class="fa fa-twitter" aria-hidden="true"></i>
-                                <span class="sr-only">Twitter</span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a target="_blank" href="https://www.instagram.com/millcomedy/">
-                                <i class="fa fa-instagram" aria-hidden="true"></i>
-                                <span class="sr-only">Instagram</span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a target="_blank" href="https://www.youtube.com/channel/UCm8_k81-p_cEimTHmhDOB-w">
-                                <i class="fa fa-youtube" aria-hidden="true"></i>
-                                <span class="sr-only">YouTube</span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="contact.html">
-                                <i class="fa fa-envelope-square" aria-hidden="true"></i>
-                                <span class="sr-only">Contact</span>
-                            </a>
-                        </li>
-                    </ul>
-            </div>
+<footer class="container-fluid">
+    <div id="footer-details" class="row">
+        <div class="col">
+                <ul class="list-inline social-links">
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.instagram.com/millcomedy/">
+                            <i class="sm-icon fa fa-instagram" aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.youtube.com/channel/UCm8_k81-p_cEimTHmhDOB-w">
+                            <i class="sm-icon fa fa-youtube" aria-hidden="true"></i>
+                            <span class="sr-only">YouTube</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="contact.html">
+                            <i class="sm-icon fa fa-envelope-square" aria-hidden="true"></i>
+                            <span class="sr-only">Contact</span>
+                        </a>
+                    </li>
+                </ul>
         </div>
-    </footer>
-<!--/.footer-->
+    </div>  
+</footer>
+<!--footer-->
+
 </body>
 
 </html>
